--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.0.11",
+    "@react-navigation/native": "^7.0.6",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-date-picker": "git+https://github.com/badrey/react-native-date-picker.git#new-arc-fix",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-mmkv": "^3.1.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
