--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=chronoloom.keystore
+MYAPP_UPLOAD_KEY_ALIAS=chronoloom_alias
+MYAPP_UPLOAD_STORE_PASSWORD=varada87
+MYAPP_UPLOAD_KEY_PASSWORD=varada87
